--- a/docs/reference/transform/apis/delete-transform.asciidoc
+++ b/docs/reference/transform/apis/delete-transform.asciidoc
@@ -36,6 +36,11 @@ include::{es-repo-dir}/rest-api/common-parms.asciidoc[tag=transform-id]
 current state. The default value is `false`, meaning that the {transform} must be
 `stopped` before it can be deleted.
 
+`delete_destination_index`::
+(Optional, Boolean) When `true`, the auto-created destination index is deleted
+together with the {transform} that created the index. The default value is
+`false`, meaning that the destination index will not be deleted.
+
 `timeout`::
 (Optional, time)
 Period to wait for a response. If no response is received before the timeout
