Rename processor to reroute and add destination option

--- a/docs/reference/ingest/processors.asciidoc
+++ b/docs/reference/ingest/processors.asciidoc
@@ -39,7 +39,7 @@ include::processors/circle.asciidoc[]
 include::processors/community-id.asciidoc[]
 include::processors/convert.asciidoc[]
 include::processors/csv.asciidoc[]
-include::processors/data-stream-router.asciidoc[]
+include::processors/reroute.asciidoc[]
 include::processors/date.asciidoc[]
 include::processors/date-index-name.asciidoc[]
 include::processors/dissect.asciidoc[]
