--- a/docs/reference/search/search.asciidoc
+++ b/docs/reference/search/search.asciidoc
@@ -511,8 +511,8 @@ include::{es-repo-dir}/rest-api/common-parms.asciidoc[tag=knn-query-vector]
 
 `query_vector_builder`::
 (Optional, object)
-A configuration object indicating how to build a query_vector before executing 
-the request. You must provide a `query_vector_builder` or `query_vector`, but 
+A configuration object indicating how to build a query_vector before executing
+the request. You must provide a `query_vector_builder` or `query_vector`, but
 not both. Refer to <<semantic-search>> to learn more.
 
 ====
@@ -545,6 +545,18 @@ Period of time used to extend the life of the PIT.
 `query`::
 (Optional, <<query-dsl,query object>>) Defines the search definition using the
 <<query-dsl,Query DSL>>.
+
+[[request-body-rank]]
+`rank`::
+(Optional, object) Defines a method for combining and ranking multiple queries
+including both bm25 and knn.
++
+.Ranking methods
+[%collapsible%open]
+====
+`rrf`::
+(Optional, object) Sets the ranking method to <<rrf, reciprocal rank fusion (RRF)>>.
+====
 
 [[search-api-body-runtime]]
 // tag::runtime-mappings-def[]
