--- a/x-pack/docs/en/rest-api/security/get-builtin-privileges.asciidoc
+++ b/x-pack/docs/en/rest-api/security/get-builtin-privileges.asciidoc
@@ -72,6 +72,7 @@ A successful call returns an object with "cluster" and "index" fields.
     "manage_autoscaling",
     "manage_ccr",
     "manage_data_frame_transforms",
+    "manage_engine",
     "manage_enrich",
     "manage_ilm",
     "manage_index_templates",
