--- a/x-pack/docs/en/rest-api/security/get-builtin-privileges.asciidoc
+++ b/x-pack/docs/en/rest-api/security/get-builtin-privileges.asciidoc
@@ -70,6 +70,7 @@ A successful call returns an object with "cluster" and "index" fields.
     "manage",
     "manage_api_key",
     "manage_autoscaling",
+    "manage_behavioral_analytics",
     "manage_ccr",
     "manage_data_frame_transforms",
     "manage_engine",
