--- a/docs/reference/indices/get-data-stream.asciidoc
+++ b/docs/reference/indices/get-data-stream.asciidoc
@@ -98,6 +98,9 @@ returned.
 include::{es-repo-dir}/rest-api/common-parms.asciidoc[tag=ds-expand-wildcards]
 +
 Defaults to `open`.
++
+experimental:[]
+include::{es-repo-dir}/rest-api/common-parms.asciidoc[tag=include-defaults]
 
 [role="child_attributes"]
 [[get-data-stream-api-response-body]]
@@ -216,6 +219,25 @@ If `true`, the data stream this data stream allows custom routing on write reque
 (Boolean)
 If `true`, the data stream is created and managed by {ccr} and the local
 cluster can not write into this data stream or change its mappings.
+
+`lifecycle`::
+(object)
+experimental:[] Contains the configuration for the data lifecycle management of this data stream.
++
+.Properties of `lifecycle`
+[%collapsible%open]
+=====
+`data_retention`::
+(string)
+If defined, every document added to this data stream will be stored at least for this time frame. Any time after this
+duration the document could be deleted. When empty, every document in this data stream will be stored indefinitely.
+
+`rollover`::
+(object)
+The conditions which will trigger the rollover of a backing index as configured by the cluster setting
+`cluster.dlm.default.rollover`. This property is an implementation detail and it will only be retrieved when the query
+param `include_defaults` is set to `true`. The contents of this field are subject to change.
+=====
 ====
 
 [[get-data-stream-api-example]]
