--- a/docs/reference/indices/get-index-template.asciidoc
+++ b/docs/reference/indices/get-index-template.asciidoc
@@ -63,6 +63,9 @@ include::{docdir}/rest-api/common-parms.asciidoc[tag=local]
 
 include::{docdir}/rest-api/common-parms.asciidoc[tag=master-timeout]
 
+experimental:[]
+include::{docdir}/rest-api/common-parms.asciidoc[tag=include_defaults]
+
 
 [[get-template-api-example]]
 ==== {api-examples-title}
