Fix typo, '_' to '-'

--- a/docs/reference/indices/get-component-template.asciidoc
+++ b/docs/reference/indices/get-component-template.asciidoc
@@ -72,7 +72,7 @@ include::{docdir}/rest-api/common-parms.asciidoc[tag=local]
 include::{docdir}/rest-api/common-parms.asciidoc[tag=master-timeout]
 
 experimental:[]
-include::{docdir}/rest-api/common-parms.asciidoc[tag=include_defaults]
+include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults]
 
 [[get-component-template-api-example]]
 ==== {api-examples-title}
