--- a/docs/reference/indices/get-index-template.asciidoc
+++ b/docs/reference/indices/get-index-template.asciidoc
@@ -64,7 +64,7 @@ include::{docdir}/rest-api/common-parms.asciidoc[tag=local]
 include::{docdir}/rest-api/common-parms.asciidoc[tag=master-timeout]
 
 experimental:[]
-include::{docdir}/rest-api/common-parms.asciidoc[tag=include_defaults]
+include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults]
 
 
 [[get-template-api-example]]
