--- a/docs/reference/indices/get-index-template.asciidoc
+++ b/docs/reference/indices/get-index-template.asciidoc
@@ -63,9 +63,7 @@ include::{docdir}/rest-api/common-parms.asciidoc[tag=local]
 
 include::{docdir}/rest-api/common-parms.asciidoc[tag=master-timeout]
 
-include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults]
-+
-experimental:[]
+include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults] experimental:[]
 
 
 [[get-template-api-example]]
