--- a/docs/reference/indices/get-component-template.asciidoc
+++ b/docs/reference/indices/get-component-template.asciidoc
@@ -71,7 +71,9 @@ include::{docdir}/rest-api/common-parms.asciidoc[tag=local]
 
 include::{docdir}/rest-api/common-parms.asciidoc[tag=master-timeout]
 
-include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults] experimental:[]
+include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults]
++
+experimental:[]
 
 [[get-component-template-api-example]]
 ==== {api-examples-title}
