--- a/docs/reference/indices/get-index-template.asciidoc
+++ b/docs/reference/indices/get-index-template.asciidoc
@@ -63,8 +63,9 @@ include::{docdir}/rest-api/common-parms.asciidoc[tag=local]
 
 include::{docdir}/rest-api/common-parms.asciidoc[tag=master-timeout]
 
-include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults] experimental:[]
-
+include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults]
++
+experimental:[]
 
 [[get-template-api-example]]
 ==== {api-examples-title}
