Change preview format.

--- a/docs/reference/indices/get-component-template.asciidoc
+++ b/docs/reference/indices/get-component-template.asciidoc
@@ -73,7 +73,7 @@ include::{docdir}/rest-api/common-parms.asciidoc[tag=master-timeout]
 
 include::{docdir}/rest-api/common-parms.asciidoc[tag=include-defaults]
 +
-experimental:[]
+In experimental:[].
 
 [[get-component-template-api-example]]
 ==== {api-examples-title}
