--- a/docs/reference/indices/get-data-stream.asciidoc
+++ b/docs/reference/indices/get-data-stream.asciidoc
@@ -99,9 +99,9 @@ include::{es-repo-dir}/rest-api/common-parms.asciidoc[tag=ds-expand-wildcards]
 +
 Defaults to `open`.
 
-include::{es-repo-dir}/rest-api/common-parms.asciidoc[tag=include-defaults]
-+
-In experimental:[].
+`include_defaults`::
+(Optional, Boolean) Functionality in experimental:[]. If `true`, return all default settings in the response.
+Defaults to `false`.
 
 [role="child_attributes"]
 [[get-data-stream-api-response-body]]
@@ -223,7 +223,7 @@ cluster can not write into this data stream or change its mappings.
 
 `lifecycle`::
 (object)
-Contains the configuration for the data lifecycle management of this data stream, in experimental:[].
+Functionality in experimental:[]. Contains the configuration for the data lifecycle management of this data stream.
 +
 .Properties of `lifecycle`
 [%collapsible%open]
