--- a/docs/reference/monitoring/indices.asciidoc
+++ b/docs/reference/monitoring/indices.asciidoc
@@ -2,6 +2,10 @@
 [[config-monitoring-indices]]
 == Configuring indices for monitoring
 
+IMPORTANT: This information applies to indices created by legacy collection
+methods. It is not valid when using {agent} or {metricbeat} to collect
+monitoring data.
+
 <<indices-templates-v1,Index templates>> are used to configure the indices
 that store the monitoring data collected from a cluster.
 
@@ -29,7 +33,6 @@ and the number of replicas to two.
 PUT /_index_template/custom_monitoring
 {
   "index_patterns": [
-  ".monitoring-beats-8-*",
   ".monitoring-es-8-*",
   ".monitoring-kibana-8-*",
   ".monitoring-logstash-8-*"
