--- a/docs/reference/engines/apis/put-engine.asciidoc
+++ b/docs/reference/engines/apis/put-engine.asciidoc
@@ -56,6 +56,7 @@ PUT _engine/my-engine?create
   "analytics_collection_name": "my-analytics-collection"
 }
 --------------------------------------------------
+// TEST[skip:TBD]
 
 The following example creates or updates an existing search engine:
 
