--- a/docs/reference/search-application/apis/index.asciidoc
+++ b/docs/reference/search-application/apis/index.asciidoc
@@ -1,7 +1,7 @@
 [[search-application-apis]]
 == Search Application APIs
 
-Use search application APIs to manage tasks and resources related to search applications.
+Use Search Application APIs to manage tasks and resources related to Search Applications.
 
 include::put-search-application.asciidoc[]
 include::get-search-application.asciidoc[]
