Search-Troubleshoot | Most Recent Record
👋🏼  howdy, team! 

May we add a section to [this page](https://www.elastic.co/guide/en/elasticsearch/reference/master/troubleshooting-searches.html#troubleshooting-check-field-values) to query for the latest record on an index (pattern)? This will be helpful to decide between Kibana Discover filter and Elasticsearch ingest lag problems.

--- a/docs/reference/troubleshooting/troubleshooting-searches.asciidoc
+++ b/docs/reference/troubleshooting/troubleshooting-searches.asciidoc
@@ -225,6 +225,21 @@ If the field does not return any values, check the data ingestion process. The
 field may have a different name.
 
 [discrete]
+[[troubleshooting-searches-latest-data]]
+=== Check the latest value
+
+For time-series data, confirm there's non-filtered data within the attempted 
+time range. For example, if trying to query the lastest data for field 
+`@timestamp` then you can run the following to see if the max `@timestamp` 
+falls within the attempted range:
+
+[source,console]
+----
+GET my-index-000001/_search?sort=@timestamp:desc&size=1
+----
+
+
+[discrete]
 [[troubleshooting-searches-validate-explain-profile]]
 === Validate, explain, and profile queries
 
