Add two important missing release highlights
TSDS has been in tech preview for 18 months and the switch to GA was
done as part of two docs-only PRs, and as a result no changelog entries
were made, and certainly no release highlights.

We've manually created the changelog entries with release highlights,
using the PR numbers for the docs-only changes, which are not the actual
feature PRs, but still the most recent PRs related to these features
and certainly the PRs associated with the change from tech-preview to GA.

--- a/docs/reference/release-notes/8.7.0.asciidoc
+++ b/docs/reference/release-notes/8.7.0.asciidoc
@@ -334,6 +334,8 @@ Machine Learning::
 
 TSDB::
 * Add a TSDB rate aggregation {es-pull}90447[#90447]
+* Release time series down-sampling as GA {es-pull}92913[#92913]
+* Release time series index settings and data stream as GA {es-pull}91519[#91519]
 * Release time_series and rate (on counter fields) aggegations as tech preview {es-pull}93546[#93546]
 
 Transform::
