Refined text for TSDS and downsampling highlights
And regenerated release notes

--- a/docs/reference/release-notes/8.7.0.asciidoc
+++ b/docs/reference/release-notes/8.7.0.asciidoc
@@ -334,9 +334,9 @@ Machine Learning::
 
 TSDB::
 * Add a TSDB rate aggregation {es-pull}90447[#90447]
-* Release time series down-sampling as GA {es-pull}92913[#92913]
-* Release time series index settings and data stream as GA {es-pull}91519[#91519]
+* Downsampling GA {es-pull}92913[#92913]
 * Release time_series and rate (on counter fields) aggegations as tech preview {es-pull}93546[#93546]
+* Time series (TSDS) GA {es-pull}91519[#91519]
 
 Transform::
 * Transform _schedule_now API {es-pull}92948[#92948] (issue: {es-issue}44722[#44722])
