--- a/docs/reference/release-notes/highlights.asciidoc
+++ b/docs/reference/release-notes/highlights.asciidoc
@@ -23,17 +23,23 @@ Other versions:
 // tag::notable-highlights[]
 
 [discrete]
-[[release_time_series_index_settings_data_stream_as_ga]]
-=== Release time series index settings and data stream as GA
-The time series (TSDB) mode on indexes has been in tech preview, and is now released as GA.
-This also includes support for time series data stream and ingest.
+[[time_series_tsds_ga]]
+=== Time series (TSDS) GA
+Time Series Data Stream (TSDS) is a feature for optimizing Elasticsearch indices for time series data.
+This involves sorting the indices to achieve better compression and using synthetic_source to reduce index size.
+As a result, TSDS indices are significantly smaller than non-time_series indices that contain the same data.
+TSDS is particularly useful for managing time series data with high volume.
 
 {es-pull}91519[#91519]
 
 [discrete]
-[[release_time_series_down_sampling_as_ga]]
-=== Release time series down-sampling as GA
-Time series (TSDB) down-sampling has been in tech preview, and is now released as GA.
+[[downsampling_ga]]
+=== Downsampling GA
+Downsampling is a feature that reduces the number of stored documents in Elasticsearch time series indices,
+resulting in smaller indices and improved query latency. This optimization is achieved by pre-aggregating
+time series indices, using the time_series index schema to identify the time series.
+Downsampling is configured as an action in ILM, making it a useful tool for managing large volumes of
+time series data in Elasticsearch.
 
 {es-pull}92913[#92913]
 
