--- a/docs/reference/search-application/apis/index.asciidoc
+++ b/docs/reference/search-application/apis/index.asciidoc
@@ -1,5 +1,5 @@
 [[search-application-apis]]
-== Search Application APIs
+= Search Application APIs
 
 Use Search Application APIs to manage tasks and resources related to Search Applications.
 
