--- a/docs/reference/search-application/apis/put-search-application.asciidoc
+++ b/docs/reference/search-application/apis/put-search-application.asciidoc
@@ -23,7 +23,8 @@ Also requires `manage` privileges on all indices that are added to the Search Ap
 == {api-path-parms-title}
 
 `create`::
-(Optional, Boolean) If true, this request will fail attempting to create a Search Application that already exists.
+(Optional, Boolean) If `true`, this request cannot replace or update existing Search Applications.
+Defaults to `false`.
 
 [[put-search-application-response-codes]]
 == {api-response-codes-title}
