--- a/docs/reference/monitoring/production.asciidoc
+++ b/docs/reference/monitoring/production.asciidoc
@@ -141,7 +141,7 @@ cluster. Skip this step for {beats} that are managed by {agent}.
 . (Optional) {apm-guide-ref}/monitor-apm.html[Configure APM Server monitoring]
 
 . (Optional) Configure {kib} to collect data and send it to the monitoring cluster:
-** {kibana-ref}/monitoring-elastic-agent.html[{agent} collection methods]
+** {agent} collection methods (TODO: Make an active link)
 ** {kibana-ref}/monitoring-metricbeat.html[{metricbeat} collection methods]
 ** {kibana-ref}/monitoring-kibana.html[Legacy collection methods]
 
