--- a/docs/reference/release-notes/highlights.asciidoc
+++ b/docs/reference/release-notes/highlights.asciidoc
@@ -23,6 +23,30 @@ Other versions:
 // tag::notable-highlights[]
 
 [discrete]
+[[time_series_tsds_ga]]
+=== Time series (TSDS) GA
+Time Series Data Stream (TSDS) is a feature for optimizing Elasticsearch indices for time series data.
+This involves sorting the indices to achieve better compression and using synthetic_source to reduce index size.
+As a result, TSDS indices are significantly smaller than non-time_series indices that contain the same data.
+TSDS is particularly useful for managing time series data with high volume.
+
+{es-pull}91519[#91519]
+
+[discrete]
+[[downsampling_ga]]
+=== Downsampling GA
+Downsampling is a feature that reduces the number of stored documents in Elasticsearch time series indices,
+resulting in smaller indices and improved query latency. This optimization is achieved by pre-aggregating
+time series indices, using the time_series index schema to identify the time series.
+Downsampling is configured as an action in ILM, making it a useful tool for managing large volumes of
+time series data in Elasticsearch.
+
+{es-pull}92913[#92913]
+
+// end::notable-highlights[]
+
+
+[discrete]
 [[geohex_aggregations_on_both_geo_point_geo_shape_fields]]
 === Geohex aggregations on both `geo_point` and `geo_shape` fields
 Previously Elasticsearch 8.1.0 expanded `geo_grid` aggregation support from rectangular tiles (geotile and geohash)
@@ -51,6 +75,13 @@ includes a vector for the image and another vector for the text. The user may wa
 relevance ranking based on a combination of all of these kNN clauses.
 
 {es-pull}92118[#92118]
+
+[discrete]
+[[make_natural_language_processing_ga]]
+=== Make natural language processing GA
+From 8.7, NLP model management, model allocation, and support for inference against third party models are generally available. (The new `text_embedding` extension to `knn` search is still in technical preview.)
+
+{es-pull}92213[#92213]
 
 [discrete]
 [[speed_up_ingest_geoip_processors]]
@@ -150,22 +181,11 @@ image::images/spatial/geogrid_h3_children.png[Kibana map with three H3 layers: c
 {es-pull}93370[#93370]
 
 [discrete]
-[[make_nlp_ga]]
-=== Make natural language processing GA
-From 8.7, NLP model management, model allocation, and support for inference 
-against third party models are generally available. (The new `text_embedding` 
-extension to `knn` search is still in technical preview.)
-
-{es-pull}92213[#92213]
-
-
-[discrete]
 [[make_frequent_item_sets_aggregation_ga]]
 === Make `frequent_item_sets` aggregation GA
 The `frequent_item_sets` aggregation has been moved from technical preview to general availability.
 
 {es-pull}93421[#93421]
-
 
 [discrete]
 [[release_time_series_rate_on_counter_fields_aggegations_as_tech_preview]]
@@ -178,7 +198,4 @@ Currently there is no documentation about the `time_series` aggregation.
 This will be added in a followup change.
 
 {es-pull}93546[#93546]
-
-// end::notable-highlights[]
-
 
