Revert back to code block

--- a/docs/reference/search-application/apis/list-search-applications.asciidoc
+++ b/docs/reference/search-application/apis/list-search-applications.asciidoc
@@ -54,21 +54,18 @@ GET _application/search_application/?from=0&size=3&q=foo
 
 As sample response:
 
-[source,js]
---------------------------------------------------
+```
 {
   "count": 2,
   "results": [
     {
       "name": "app-1",
-      "indices": [ "index1", "index2" ],
-      "search_alias": "app-1"
+      "indices": [ "index1", "index2" ]
     },
     {
       "name": "app-2",
-      "indices": [ "index3", "index4" ],
-      "search_alias": "app-2"
+      "indices": [ "index3", "index4" ]
     }
   ]
 }
---------------------------------------------------
+```
