--- a/docs/reference/ccr/bi-directional-disaster-recovery.asciidoc
+++ b/docs/reference/ccr/bi-directional-disaster-recovery.asciidoc
@@ -20,20 +20,20 @@ DELETE /_data_stream/*
 ////
 
 Learn how to set up disaster recovery between two clusters based on
-bi-directional {ccr}. The following tutorial is designed for data streams which supports 
-<<update-docs-in-a-data-stream-by-query,update_by_query>> and
- <<delete-docs-in-a-data-stream-by-query,delete_by_query>>. 
+bi-directional {ccr}. The following tutorial is designed for data streams which support 
+<<update-docs-in-a-data-stream-by-query,update by query>> and
+ <<delete-docs-in-a-data-stream-by-query,delete by query>>. 
  You can only perform these actions on the leader index. 
 
-This tutorial works with Logstash as the source of ingestion. It takes
-advantage of a logstash feature where {logstash-ref}/plugins-outputs-elasticsearch.html[logstash  output to Elasticsearch] can be load balanced
-across an array of hosts specified>>. Beats and agents currently do not 
+This tutorial works with {ls} as the source of ingestion. It takes
+advantage of a {ls} feature where {logstash-ref}/plugins-outputs-elasticsearch.html[the {ls} output to {es}] can be load balanced
+across an array of hosts specified>>. {beats} and {agents} currently do not 
 support multiple outputs. It should also be possible to set up a proxy 
-(Load Balancer) to redirect traffic without Logstash in this tutorial. 
+(load balancer) to redirect traffic without {ls} in this tutorial. 
 
 * Setting up a remote cluster on `clusterA` and `clusterB`.
 * Setting up bi-directional cross-cluster replication with exclusion patterns.
-* Setting up Logstash with multiple hosts to allow automatic load balancing and switching during disasters.
+* Setting up {ls} with multiple hosts to allow automatic load balancing and switching during disasters.
 
 image::images/ccr-bi-directional-disaster-recovery.png[Bi-directional cross cluster replication failover and failback]
 
@@ -116,20 +116,20 @@ PUT /_ccr/auto_follow/logs-generic-default
 +
 IMPORTANT: Existing data on the cluster will not be replicated by
 `_ccr/auto_follow` even though the patterns may match. This function will only
-replicate newly created backing indices (as part of the data stream)
+replicate newly created backing indices (as part of the data stream).
 +
 IMPORTANT: Ensure to have `leader_index_exclustion_patterns` to avoid recursion.
 +
 TIP: `follow_index_pattern` allows lowercase characters only.
 +
-TIP: This step cannot be executed via Kibana UI due to the lack of an exclusion
-pattern in the UI. Use API in this step.
+TIP: This step cannot be executed via the {kib} UI due to the lack of an exclusion
+pattern in the UI. Use the API in this step.
 
-. Set up the Logstash config file
+. Set up the {ls} configuration file
 +
-In the following example, I use the input generator to demonstrate the document
-count in the clusters. Users would need to reconfigure this section
-to suit their use cases. 
+This example uses the input generator to demonstrate the document
+count in the clusters. Reconfigure this section
+to suit your own use case. 
 +
 [source,logstash]
 ----
@@ -151,14 +151,14 @@ output {
 ----
 +
 IMPORTANT: The key point is that when `cluster A` is down, all traffic will be
-automatically redirected to `cluster B`, and once `cluster A` comes back, they
-are automatically redirected back to `cluster A` again. This is achieved by the
+automatically redirected to `cluster B`. Once `cluster A` comes back, traffic
+is automatically redirected back to `cluster A` again. This is achieved by the
 option `hosts` where multiple ES cluster endpoints are specified in the
-array `[cluserA, clusterB]`.
+array `[clusterA, clusterB]`.
 +
 TIP: Set up the same password for the same user on both clusters to use this load-balancing feature.
 
-. Start logstash with the above config file.
+. Start {ls} with the earlier configuration file.
 +
 [source,sh]
 ----
@@ -166,26 +166,24 @@ TIP: Set up the same password for the same user on both clusters to use this loa
 bin/logstash -f multiple_hosts.conf
 ----
 
-. Observe document counts in data streams
+. Observe document counts in data streams.
 +
-The setup above will create a data stream named `logs-generic-default`
-on each of the clusters. Logstash will write 50% of the documents to `clusterp
-A` and 50% of the documents to `cluster B` when both clusters are alive.
+The setup creates a data stream named `logs-generic-default`
+on each of the clusters. {ls} will write 50% of the documents to `cluster
+A` and 50% of the documents to `cluster B` when both clusters are up.
 +
 Bi-directional {ccr} will create one more data stream on each of the clusters
-with the `-replication_from_cluster{a|b}` suffix. At the end of this step,
-you should see:
+with the `-replication_from_cluster{a|b}` suffix. At the end of this step:
 +
-* data streams On cluster A 
-** 50 documents in logs-generic-default-replicated_from_clusterb 
-** 50 documents in logs-generic-default
-* data streams On cluster B 
-** 50 documents in logs-generic-default-replicated_from_clustera
-** 50 documents in logs-generic-default
+* data streams on cluster A contain:
+** 50 documents in `logs-generic-default-replicated_from_clusterb` 
+** 50 documents in `logs-generic-default`
+* data streams on cluster B contain:
+** 50 documents in `logs-generic-default-replicated_from_clustera`
+** 50 documents in `logs-generic-default`
 
-. Queries should be set up to perform search across them.
-+
-If you perform a search on `logs*` on either of the clusters, you should see 100
+. Queries should be set up to search across both data streams.
+A query on `logs*`, on either of the clusters, returns 100
 hits in total. 
 +
 [source,console]
@@ -197,8 +195,8 @@ GET logs*/_search?size=0
 ==== Failover when `clusterA` is down
 . You can simulate this by shutting down either of the clusters. Let's shut down
 `cluster A` in this tutorial.
-. Start logstash with the same config file. (This step is not required in real
-use cases where logstash ingests continuously)
+. Start {ls} with the same configuration file. (This step is not required in real
+use cases where {ls} ingests continuously)
 +
 [source,sh]
 ----
@@ -206,34 +204,34 @@ use cases where logstash ingests continuously)
 bin/logstash -f multiple_hosts.conf
 ----
 
-. Observe all logstash traffic will be redirected to `cluster B` automatically. 
+. Observe all {ls} traffic will be redirected to `cluster B` automatically. 
 +
 TIP: You should also redirect all search traffic to the `clusterB` cluster during this time. 
 
-. Observe two data streams on `cluster B` now contain a different number of documents. 
+. The two data streams on `cluster B` now contain a different number of documents. 
 +
-* data streams On cluster A (Dead) 
-** 50 documents in logs-generic-default-replicated_from_clusterb 
-** 50 documents in logs-generic-default
-* data streams On cluster B (Alive) 
-** 50 documents in logs-generic-default-replicated_from_clustera
-** 150 documents in logs-generic-default
+* data streams on cluster A (down) 
+** 50 documents in `logs-generic-default-replicated_from_clusterb` 
+** 50 documents in `logs-generic-default`
+* data streams On cluster B (up) 
+** 50 documents in `logs-generic-default-replicated_from_clustera`
+** 150 documents in `logs-generic-default`
 
 
 ==== Failback when `clusterA` comes back
-. You can simulate this by turning `cluster A` back. 
-. Observe data ingested to `cluster B` during `cluster A` 's downtime will be
+. You can simulate this by turning `cluster A` back on. 
+. Data ingested to `cluster B` during `cluster A` 's downtime will be
 automatically replicated. 
 +
-* data streams On cluster A
-** 150 documents in logs-generic-default-replicated_from_clusterb 
-** 50 documents in logs-generic-default
-* data streams On cluster B
-** 50 documents in logs-generic-default-replicated_from_clustera
-** 150 documents in logs-generic-default
+* data streams on cluster A
+** 150 documents in `logs-generic-default-replicated_from_clusterb` 
+** 50 documents in `logs-generic-default`
+* data streams on cluster B
+** 50 documents in `logs-generic-default-replicated_from_clustera`
+** 150 documents in `logs-generic-default`
 
-. If you have logstash running at this time, you will also observe traffic is
-sending to both clusters.
+. If you have {ls} running at this time, you will also observe traffic is
+sent to both clusters.
 
 ==== Perform update or delete by query
 It is possible to update or delete the documents but you can only perform these actions on the leader index.
