--- a/docs/reference/ccr/uni-directional-disaster-recovery.asciidoc
+++ b/docs/reference/ccr/uni-directional-disaster-recovery.asciidoc
@@ -21,15 +21,15 @@ DELETE kibana_sample_data_ecommerce
 
 
 Learn how to fail over and fail back between two clusters based on
-uni-directional {ccr}. You can also visit <<ccr-disaster-recovery-bi-directional-tutorial,ccr bi-directional tutorial>> to set up replicating data streams that automatically failover and failback without human
+uni-directional {ccr}. You can also visit <<ccr-disaster-recovery-bi-directional-tutorial>> to set up replicating data streams that automatically fail over and fail back without human
 intervention.
 
 * Setting up uni-directional {ccr} replicated from `clusterA`
 to `clusterB`.
 * Failover. If `clusterA` goes offline, `clusterB` needs to "promote" follower
 indices to regular indices to allow write operations. All ingestion will need to
-be redirected to `clusterB`, this is controlled by the clients (Logstash, Beats,
-Agents, etc). 
+be redirected to `clusterB`, this is controlled by the clients ({ls}, {beats},
+{agents}, etc). 
 * Failback. When `clusterA` is back online, it assumes the role of a follower
 and replicates the leader indices from `clusterB`.
 
@@ -38,7 +38,7 @@ image::images/ccr-uni-directional-disaster-recovery.png[Uni-directional cross cl
 NOTE: {ccr-cap} provides functionality to replicate user-generated indices only.
 {ccr-cap} isn't designed for replicating system-generated indices or snapshot
 settings, and can't replicate {ilm-init} or {slm-init} policies across clusters.
-Learn more in {ccr} <<ccr-limitations,limitations>>
+Learn more in {ccr} <<ccr-limitations,limitations>>.
 
 ==== Prerequisites
 Before completing this tutorial,
@@ -93,11 +93,11 @@ index. Follower indices are read-only and will reject any writes.
 ==== Failover when `clusterA` is down
 
 . Promote the follower indices in `clusterB` into regular indices so 
-that it will be accepting writes. This can be achieved by:
-* Pauses indexing following for the follower index.
-* Closes the follower index.
-* Unfollows the leader index.
-* Opens the follower index (which at this point is a regular index).
+that they accept writes. This can be achieved by:
+* First, pause indexing following for the follower index.
+* Next, close the follower index.
+* Unfollow the leader index.
+* Finally, open the follower index (which at this point is a regular index).
 
 +
 [source,console]
@@ -110,10 +110,10 @@ POST /kibana_sample_data_ecommerce_copy/_open
 ----
 // TEST[continued]
 
-. On the Client (logstash, beats, agent) side, manually re-enable ingestion of
+. On the client side ({ls}, {beats}, {agent}), manually re-enable ingestion of
 `kibana_sample_data_ecommerce` and redirect traffic to the `clusterB`. You should
 also redirect all search traffic to the `clusterB` cluster during
-this time. We can simulate this by ingesting documents into this index. You should
+this time. You can simulate this by ingesting documents into this index. You should
 notice this index is now writable.
 +
 [source,console]
@@ -185,7 +185,7 @@ PUT /kibana_sample_data_ecommerce/_ccr/follow?wait_for_active_shards=1
 // TEST[continued]
 // TEST[s/clusterB/remote_cluster/]
 
-. You should now see updated documents from this index on the follower cluster.
+. The index on the follower cluster now contains the updated documents.
 +
 [source,console]
 ----
